--- a/www/index.html
+++ b/www/index.html
@@ -2,34 +2,74 @@
 <html>
     <head>
         <script data-main="app" src="lib/require.js"></script>
+        <link rel="stylesheet" type="text/css" href="styles/carousel.css"></link>
     </head>
     <body>
-        <h1>Hello World</h1>
         <div class="territories-carousel">
             <div class="slides swipe mobile-only">
                 <div class="swipe-wrap">
 
-                    <div class="slide">
+                    <div class="slide slide-one">
+                        <div class="chill-challenging barely-challenging">
+                            <p class="chill">chill</p>
+                            <p class="challenging">challenging</p>
+                        </div>
                         <div class="slide-image-wrapper">
                             <img src="" height="24" width="24">
+                            <button class="view-map">View Map +</button>
+                        </div>
+                        <div class="info-wrapper">
+                            <h1>territory one</h1>
+                            <h2>tagline.  six terrain parks.  one super pipe.  endless creativity.</h2>
+                            <p>Aenean auctor eleifend lorem, volutpat pretium ex pellentesque sed. Etiam in rhoncus eros. Aenean cursus mi et justo efficitur tincidunt.</p>
                         </div>
                     </div>
 
-                    <div class="slide">
+                    <div class="slide slide-two">
+                        <div class="chill-challenging very-chill">
+                            <p class="chill">chill</p>
+                            <p class="challenging">challenging</p>
+                        </div>
                         <div class="slide-image-wrapper">
                             <img src="" height="24" width="24">
+                            <button class="view-map">View Map +</button>
+                        </div>
+                        <div class="info-wrapper">
+                            <h1>territory two</h1>
+                            <h2>tagline.  six terrain parks.  one super pipe.  endless creativity.</h2>
+                            <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nulla non sodales orci. Praesent condimentum lectus ac interdum lobortis.</p>
                         </div>
                     </div>
 
-                    <div class="slide">
+                    <div class="slide slide-three">
+                        <div class="chill-challenging very-challenging">
+                            <p class="chill">chill</p>
+                            <p class="challenging">challenging</p>
+                        </div>
                         <div class="slide-image-wrapper">
                             <img src="" height="24" width="24">
+                            <button class="view-map">View Map +</button>
+                        </div>
+                        <div class="info-wrapper">
+                            <h1>territory three</h1>
+                            <h2>tagline.  six terrain parks.  one super pipe.  endless creativity.</h2>
+                            <p>Praesent consectetur nulla mi, sed aliquet eros pharetra quis. Donec non ligula vel quam pretium maximus in at lorem.</p>
                         </div>
                     </div>
 
-                    <div class="slide">
+                    <div class="slide slide-four">
+                        <div class="chill-challenging pretty-chill">
+                            <p class="chill">chill</p>
+                            <p class="challenging">challenging</p>
+                        </div>
                         <div class="slide-image-wrapper">
                             <img src="" height="24" width="24">
+                            <button class="view-map">View Map +</button>
+                        </div>
+                        <div class="info-wrapper">
+                            <h1>territory four</h1>
+                            <h2>tagline.  six terrain parks.  one super pipe.  endless creativity.</h2>
+                            <p>Cras commodo in arcu vitae laoreet. Nulla gravida metus eu est feugiat blandit. Curabitur imperdiet dolor et dolor vestibulum dictum.</p>
                         </div>
                     </div>
 
