all the commits

--- a/www/index.html
+++ b/www/index.html
@@ -27,7 +27,9 @@
                             <h2>The Seven Territories</h2>
                             <h3>Vasquez Ridge</h3>
                             <span class="close">close</span>
-                            <img src="" height="24" width="24">
+                            <div class="image-wrapper">
+                                <img src="" height="24" width="24">
+                            </div>
                         </div>
                     </div>
 
