all the commits

--- a/www/index.html
+++ b/www/index.html
@@ -16,19 +16,22 @@
                         </div>
                         <div class="slide-image-wrapper">
                             <button class="view-map">View Map +</button>
-                            <img src="" height="24" width="24">
+                            <img src="">
                         </div>
                         <div class="info-wrapper">
                             <h1>territory one</h1>
                             <h2>tagline.  six terrain parks.  one super pipe.  endless creativity.</h2>
                             <p>Aenean auctor eleifend lorem, volutpat pretium ex pellentesque sed. Etiam in rhoncus eros. Aenean cursus mi et justo efficitur tincidunt.</p>
+                            <button type="submit" class="default submit reverse">
+                                <span class="background" style="left: auto;"></span>
+                                <span class="text"">Sign up </span></button>
                         </div>
                         <div class="modal-info">
                             <h2>The Seven Territories</h2>
                             <h3>Vasquez Ridge</h3>
                             <span class="close">close</span>
                             <div class="image-wrapper">
-                                <img src="" height="24" width="24">
+                                <img src="">
                             </div>
                         </div>
                     </div>
@@ -39,7 +42,7 @@
                             <p class="challenging">challenging</p>
                         </div>
                         <div class="slide-image-wrapper">
-                            <img src="" height="24" width="24">
+                            <img src="">
                             <button class="view-map">View Map +</button>
                         </div>
                         <div class="info-wrapper">
@@ -56,7 +59,7 @@
                         </div>
                         <div class="slide-image-wrapper">
                             <button class="view-map">View Map +</button>
-                            <img src="" height="24" width="24">
+                            <img src="">
                         </div>
                         <div class="info-wrapper">
                             <h1>territory three</h1>
@@ -72,7 +75,7 @@
                         </div>
                         <div class="slide-image-wrapper">
                             <button class="view-map">View Map +</button>
-                            <img src="" height="24" width="24">
+                            <img src="">
                         </div>
                         <div class="info-wrapper">
                             <h1>territory four</h1>
@@ -88,7 +91,7 @@
                         </div>
                         <div class="slide-image-wrapper">
                             <button class="view-map">View Map +</button>
-                            <img src="" height="24" width="24">
+                            <img src="">
                         </div>
                         <div class="info-wrapper">
                             <h1>territory four</h1>
