--- a/www/index.html
+++ b/www/index.html
@@ -1,63 +1,149 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <script data-main="app" src="lib/require.js"></script>
-        <link rel="stylesheet" type="text/css" href="styles/carousel.css"></link>
-    </head>
-    <body>
-        <div class="territories-carousel"></div>
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-        <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
-    </body>
+<html lang="en">
 
-    <script type="text/template" id="territories">
-        <ul class="chill-challenging data-level="0">
-            <li class="chill">
-                <span class="chill-level"></span>
-                <p>chill</p>
-            </li>
-            <li class="challenging">
-                <span class="challenge-level"></span>
-                <p>challenging</p>
-            </li>
-        </ul>
-        <div class="slide-image-wrapper background">
-            <img src="images/all-territories-background-map.jpg">
-        </div>
-        <div class="slides swipe mobile-only">
-            <div class="swipe-wrap">
-                {{#territories}}
-                <div class="slide" data-level="{{challengeLevel}}">
-                    <div class="slide-image-wrapper">
-                        <button class="view-map">View Map +</button>
-                        <img class="territory" src="{{territoryImage}}">
-                        <img class="logo" src="{{territoryBanner}}">
-                    </div>
-                    <div class="info-wrapper">
-                        <h1>{{name}}</h1>
-                        <h2>tagline.  six terrain parks.  one super pipe.  endless creativity.</h2>
-                        <p>Aenean auctor eleifend lorem, volutpat pretium ex pellentesque sed. Etiam in rhoncus eros. Aenean cursus mi et justo efficitur tincidunt.</p>
-                        <button type="submit" class="default submit">
-                            <span class="background"></span>
-                            <span class="text">Sign up</span>
-                        </button>
-                    </div>
-                    <div class="modal-info">
-                        <h2>The Seven Territories</h2>
-                        <h3>{{name}}</h3>
-                        <span class="close">close</span>
-                        <div class="image-wrapper">
-                            <img class="territory-modal-map" src="{{modalMap}}">
-                            <img class="background-modal-map" src="images/modal-maps/overlay-map.jpg">
-                        </div>
-                    </div>
+<head>
+    <meta charset="utf-8">
+    <title>freedom.  the infinite.</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimal-ui" />
+    <script data-main="app" src="lib/require.js"></script>
+    <link type="text/css" rel="stylesheet" href="styles/parallax.css">
+    <link type="text/css" rel="stylesheet" href="styles/reset.css">
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,300' rel='stylesheet' type='text/css'>
+</head>
+
+<body>
+<header>
+    <nav class="main-nav">
+        <a href="#layer1" class="nav_item">1</a>
+        <a href="#layer2" class="nav_item">2</a>
+        <a href="#layer3" class="nav_item">3</a>
+        <a href="#layer4" class="nav_item">4</a>
+        <a href="#layer5" class="nav_item">5</a>
+        <a href="#layer6" class="nav_item">6</a>
+    </nav>
+</header>
+
+
+<footer> </footer>
+<div class="content-wrapper">
+    <div class="environment">
+        <div class="realm">
+            <div id="layer1" class="layer one" data-depth="0" data-audio="zero-audio">
+                <h1>my freedom</h1>
+                <div class="test-case-wrapper">
+                    <img class="hidden" src=""/>
                 </div>
-                {{/territories}}
+
+                <!--<video id="clouds" src="video/Stars_in_Night.mp4" autoplay loop></video>-->
+            </div>
+            <div id="layer2" class="layer two art" data-depth="500" data-audio="one-audio">
+                <h1>art</h1>
+                <div class="test-case-wrapper">
+                    <img class="hidden" src=""/>
+                </div>
+                <div class="test-opacity">
+                    <video class="video" id="clouds" src="video/Stars_in_Night.mp4" loop></video>
+                </div>
+                <div class="condense">
+                    <p>condensed</p>
+                </div>
+            </div>
+            <div id="layer3" class="layer three" data-depth="1000" data-audio="two-audio">
+                <h1>i feel</h1>
+                <h2>the space.  all mine.</h2>
+                <h3>the sky.</h3>
+                <div class="test-case-wrapper">
+                    <img class="hidden" src=""/>
+                </div>
+            </div>
+            <div id="layer4" class="layer four art" data-depth="1500" data-audio="three-audio">
+                <h1>art</h1>
+                <div class="test-case-wrapper">
+                    <img class="hidden" src=""/>
+                </div>
+                <div class="test-opacity">
+                    <img class="hidden" src="img/hendyriding.gif"/>
+                </div>
+                <div class="condense removable">
+                    <p>condensed and removable</p>
+                </div>
+            </div>
+            <div id="layer5" class="layer five" data-depth="2000" data-audio="four-audio">
+                <h1>spring winds.</h1>
+                <h2>long dirt roads</h2>
+                <div class="test-case-wrapper">
+                    <img class="hidden" src=""/>
+                </div>
+                <!--<div class="test-opacity">-->
+                <!--<video class="video" id="clouds" src="video/gohendygo.mp4" loop></video>-->
+                <!--</div>-->
+            </div>
+            <div id="layer6" class="layer six art" data-depth="2500" data-audio="five-audio">
+                <h1>art</h1>
+                <div class="test-case-wrapper">
+                    <img class="hidden" src=""/>
+                </div>
+            </div>
+            <div id="layer7" class="layer seven" data-depth="3000" data-audio="six-audio">
+                <h1>the entrance of the infinite</h1>
+                <div class="test-case-wrapper">
+                    <img class="hidden" src=""/>
+                </div>
+            </div>
+            <div id="layer8" class="layer eight" data-depth="3500" data-audio="seven-audio">
+                <h1>ceo of my own calling</h1>
+                <div class="test-case-wrapper">
+                    <img class="hidden" src=""/>
+                </div>
+            </div>
+            <div id="layer9" class="layer nine" data-depth="4000" data-audio="eight-audio">
+                <h1>i own within myself</h1>
+                <div class="test-case-wrapper">
+                    <img class="hidden" src=""/>
+                </div>
+            </div>
+            <div id="layer9.5" class="layer ninepointfive" data-depth="4200" data-audio="nine-audio">
+                <h1>I OWN WITHIN MYSELF</h1>
+                <div class="test-case-wrapper">
+                    <img class="hidden" src=""/>
+                </div>
+            </div>
+            <div id="layer10" class="layer ten" data-depth="4500" data-audio="ten-audio">
+                <h1>i own within myself</h1>
+                <h2>the spark of fire of strength.</h2>
+                <h3>brilliance in the darkness.</h3>
+                <div class="test-case-wrapper">
+                    <img class="hidden" src=""/>
+                </div>
+            </div>
+            <div id="layer11" class="layer eleven art" data-depth="5000" data-audio="eleven-audio">
+                <h1>ART</h1>
+                <div class="test-case-wrapper">
+                    <img class="hidden" src=""/>
+                </div>
+            </div>
+            <div id="layer12" class="layer twelve" data-depth="5500" data-audio="twelve-audio">
+                <!-- <h1>into my world</h1> -->
+                <div class="test-case-wrapper">
+                    <img class="hidden" src=""/>
+                </div>
+            </div>
+            <div id="layer13" class="layer thirteen" data-depth="6500" data-audio="thirteen-audio">
+                <h1>determination in light</h1>
+                <h2>into my world</h2>
+                <h3>and looking up at joy</h3>
+                <div class="test-case-wrapper">
+                    <img class="hidden" src=""/>
+                </div>
             </div>
         </div>
-        <div class="territories-carousel-modal">
-            <p>welcome to my modal</p>
-        </div>
+    </div>
+    <!--<video id="clouds" src="video/Clouds.mp4" autoplay loop></video>-->
+</div>
 
-    </script>
+
+<div class="env__depth"></div>
+
+
+</body>
 </html>
