updates of condensable

--- a/www/index.html
+++ b/www/index.html
@@ -45,7 +45,7 @@
                     <video class="video" id="clouds" src="video/Stars_in_Night.mp4" loop></video>
                 </div>
                 <div class="condense">
-                    <p>condensed</p>
+                    <p>waves.</p>
                 </div>
             </div>
             <div id="layer3" class="layer three" data-depth="1000" data-audio="two-audio">
@@ -65,7 +65,9 @@
                     <img class="hidden" src="img/hendyriding.gif"/>
                 </div>
                 <div class="condense removable">
-                    <p>condensed and removable</p>
+                    <p>balance and waves and the moving stillness.  tranquil effort and strength in the chaos.</p>
+                    <p>the feelings of that love</p>
+                    <p>that lies below the surface.</p>
                 </div>
             </div>
             <div id="layer5" class="layer five" data-depth="2000" data-audio="four-audio">
