--- a/www/index.html
+++ b/www/index.html
@@ -62,15 +62,15 @@
                     <img class="hidden" src=""/>
                 </div>
                 <div class="test-opacity">
-                    <img class="hidden" src="img/hendyriding.gif"/>
+                    <img class="hidden" src=""/>
                 </div>
-                <div class="condense removable">
+                <div class="condense removable forwards">
                     <p>balance and waves and the moving stillness.  tranquil effort and strength in the chaos.</p>
                     <p>the feelings of that love</p>
                     <p>that lies below the surface.</p>
                 </div>
             </div>
-            <div id="layer5" class="layer five" data-depth="2000" data-audio="four-audio">
+            <div id="layer5" class="layer five" data-depth="2000" data-audio="audio/forest-stream.mp3">
                 <h1>spring winds.</h1>
                 <h2>long dirt roads</h2>
                 <div class="test-case-wrapper">
@@ -80,7 +80,7 @@
                 <!--<video class="video" id="clouds" src="video/gohendygo.mp4" loop></video>-->
                 <!--</div>-->
             </div>
-            <div id="layer6" class="layer six art" data-depth="2500" data-audio="five-audio">
+            <div id="layer6" class="layer six art" data-depth="2500" data-audio="audio/forest-stream.mp3">
                 <h1>art</h1>
                 <div class="test-case-wrapper">
                     <img class="hidden" src=""/>
