adding audio files

--- a/www/index.html
+++ b/www/index.html
@@ -80,7 +80,7 @@
                 <!--<video class="video" id="clouds" src="video/gohendygo.mp4" loop></video>-->
                 <!--</div>-->
             </div>
-            <div id="layer6" class="layer six art" data-depth="2500" data-audio="audio/forest-stream.mp3">
+            <div id="layer6" class="layer six art" data-depth="2500" data-audio="audio/forest-stream.mp3wq">
                 <h1>art</h1>
                 <div class="test-case-wrapper">
                     <img class="hidden" src=""/>
