added audio mapping

--- a/www/index.html
+++ b/www/index.html
@@ -28,7 +28,7 @@
 <div class="content-wrapper">
     <div class="environment">
         <div class="realm">
-            <div id="layer1" class="layer one" data-depth="0" data-audio="zero-audio">
+            <div id="layer1" class="layer one" data-depth="0" data-audio="audio/haunted-wind.mp3">
                 <h1>my freedom</h1>
                 <div class="test-case-wrapper">
                     <img class="hidden" src=""/>
@@ -36,7 +36,7 @@
 
                 <!--<video id="clouds" src="video/Stars_in_Night.mp4" autoplay loop></video>-->
             </div>
-            <div id="layer2" class="layer two art" data-depth="500" data-audio="one-audio">
+            <div id="layer2" class="layer two art" data-depth="500" data-audio="audio/forest-stream.mp3">
                 <h1>art</h1>
                 <div class="test-case-wrapper">
                     <img class="hidden" src=""/>
@@ -48,7 +48,7 @@
                     <p>waves.</p>
                 </div>
             </div>
-            <div id="layer3" class="layer three" data-depth="1000" data-audio="two-audio">
+            <div id="layer3" class="layer three" data-depth="1000" data-audio="audio/haunted-wind.mp3">
                 <h1>i feel</h1>
                 <h2>the space.  all mine.</h2>
                 <h3>the sky.</h3>
@@ -56,7 +56,7 @@
                     <img class="hidden" src=""/>
                 </div>
             </div>
-            <div id="layer4" class="layer four art" data-depth="1500" data-audio="three-audio">
+            <div id="layer4" class="layer four art" data-depth="1500" data-audio="audio/forest-stream.mp3">
                 <h1>art</h1>
                 <div class="test-case-wrapper">
                     <img class="hidden" src=""/>
@@ -70,7 +70,7 @@
                     <p>that lies below the surface.</p>
                 </div>
             </div>
-            <div id="layer5" class="layer five" data-depth="2000" data-audio="audio/forest-stream.mp3">
+            <div id="layer5" class="layer five" data-depth="2000" data-audio="audio/haunted-wind.mp3">
                 <h1>spring winds.</h1>
                 <h2>long dirt roads</h2>
                 <div class="test-case-wrapper">
@@ -80,37 +80,37 @@
                 <!--<video class="video" id="clouds" src="video/gohendygo.mp4" loop></video>-->
                 <!--</div>-->
             </div>
-            <div id="layer6" class="layer six art" data-depth="2500" data-audio="audio/forest-stream.mp3wq">
+            <div id="layer6" class="layer six art" data-depth="2500" data-audio="audio/forest-stream.mp3">
                 <h1>art</h1>
                 <div class="test-case-wrapper">
                     <img class="hidden" src=""/>
                 </div>
             </div>
-            <div id="layer7" class="layer seven" data-depth="3000" data-audio="six-audio">
+            <div id="layer7" class="layer seven" data-depth="3000" data-audio="audio/haunted-wind.mp3">
                 <h1>the entrance of the infinite</h1>
                 <div class="test-case-wrapper">
                     <img class="hidden" src=""/>
                 </div>
             </div>
-            <div id="layer8" class="layer eight" data-depth="3500" data-audio="seven-audio">
+            <div id="layer8" class="layer eight" data-depth="3500" data-audio="audio/forest-stream.mp3">
                 <h1>ceo of my own calling</h1>
                 <div class="test-case-wrapper">
                     <img class="hidden" src=""/>
                 </div>
             </div>
-            <div id="layer9" class="layer nine" data-depth="4000" data-audio="eight-audio">
+            <div id="layer9" class="layer nine" data-depth="4000" data-audio="audio/haunted-wind.mp3">
                 <h1>i own within myself</h1>
                 <div class="test-case-wrapper">
                     <img class="hidden" src=""/>
                 </div>
             </div>
-            <div id="layer9.5" class="layer ninepointfive" data-depth="4200" data-audio="nine-audio">
+            <div id="layer9.5" class="layer ninepointfive" data-depth="4200" data-audio="audio/forest-stream.mp3">
                 <h1>I OWN WITHIN MYSELF</h1>
                 <div class="test-case-wrapper">
                     <img class="hidden" src=""/>
                 </div>
             </div>
-            <div id="layer10" class="layer ten" data-depth="4500" data-audio="ten-audio">
+            <div id="layer10" class="layer ten" data-depth="4500" data-audio="audio/haunted-wind.mp3">
                 <h1>i own within myself</h1>
                 <h2>the spark of fire of strength.</h2>
                 <h3>brilliance in the darkness.</h3>
@@ -118,19 +118,19 @@
                     <img class="hidden" src=""/>
                 </div>
             </div>
-            <div id="layer11" class="layer eleven art" data-depth="5000" data-audio="eleven-audio">
+            <div id="layer11" class="layer eleven art" data-depth="5000" data-audio="audio/forest-stream.mp3">
                 <h1>ART</h1>
                 <div class="test-case-wrapper">
                     <img class="hidden" src=""/>
                 </div>
             </div>
-            <div id="layer12" class="layer twelve" data-depth="5500" data-audio="twelve-audio">
+            <div id="layer12" class="layer twelve" data-depth="5500" data-audio="audio/haunted-wind.mp3">
                 <!-- <h1>into my world</h1> -->
                 <div class="test-case-wrapper">
                     <img class="hidden" src=""/>
                 </div>
             </div>
-            <div id="layer13" class="layer thirteen" data-depth="6500" data-audio="thirteen-audio">
+            <div id="layer13" class="layer thirteen" data-depth="6500" data-audio="audio/forest-stream.mp3">
                 <h1>determination in light</h1>
                 <h2>into my world</h2>
                 <h3>and looking up at joy</h3>
