--- a/www/index.html
+++ b/www/index.html
@@ -71,7 +71,7 @@
                 </div>
             </div>
             <div id="layer5" class="layer five" data-depth="2000" data-audio="audio/haunted-wind.mp3">
-                <h1>spring winds.</h1>
+                <h1>...endless winds.</h1>
                 <h2>long dirt roads</h2>
                 <div class="test-case-wrapper">
                     <img class="hidden" src=""/>
@@ -93,26 +93,26 @@
                 </div>
             </div>
             <div id="layer8" class="layer eight" data-depth="3500" data-audio="audio/forest-stream.mp3">
-                <h1>ceo of my own calling</h1>
+                <h1>...discussions of my own calling</h1>
                 <div class="test-case-wrapper">
                     <img class="hidden" src=""/>
                 </div>
             </div>
             <div id="layer9" class="layer nine" data-depth="4000" data-audio="audio/haunted-wind.mp3">
-                <h1>i own within myself</h1>
+                <h1>within the self.</h1>
                 <div class="test-case-wrapper">
                     <img class="hidden" src=""/>
                 </div>
             </div>
             <div id="layer9.5" class="layer ninepointfive" data-depth="4200" data-audio="audio/forest-stream.mp3">
-                <h1>I OWN WITHIN MYSELF</h1>
+                <h1>I OWN</h1>
                 <div class="test-case-wrapper">
                     <img class="hidden" src=""/>
                 </div>
             </div>
             <div id="layer10" class="layer ten" data-depth="4500" data-audio="audio/haunted-wind.mp3">
-                <h1>i own within myself</h1>
-                <h2>the spark of fire of strength.</h2>
+                <h1>i own... so what</h1>
+                <h2>fire in strength.</h2>
                 <h3>brilliance in the darkness.</h3>
                 <div class="test-case-wrapper">
                     <img class="hidden" src=""/>
@@ -132,8 +132,8 @@
             </div>
             <div id="layer13" class="layer thirteen" data-depth="6500" data-audio="audio/forest-stream.mp3">
                 <h1>determination in light</h1>
-                <h2>into my world</h2>
-                <h3>and looking up at joy</h3>
+                <h2>and such is my world</h2>
+                <h3>existence of joy</h3>
                 <div class="test-case-wrapper">
                     <img class="hidden" src=""/>
                 </div>
